Remove legacy expression support
No longer support the legacy expressions. Only expression_groups are supported now. Use `isBlank` and `isNotBlank` where applicable. Add logging to inform user of issues where helpful. Remove unnecessary try for java streams. Reduce the number of database queries in `clear()` by using counts returned by delete operations.